--- a/rock-paper/style/style.scss
+++ b/rock-paper/style/style.scss
@@ -225,7 +225,7 @@
 
 @media (max-width: 600px){
     .header {
-        margin: 0px auto 90px;
+        margin: 0px auto 13%;
     }
     .second-page {
         width: 98%;
