--- a/rock-paper/style/style.css
+++ b/rock-paper/style/style.css
@@ -213,7 +213,7 @@
 
 @media (max-width: 600px) {
   .header {
-    margin: 0px auto 90px;
+    margin: 0px auto 13%;
   }
   .second-page {
     width: 98%;
