--- a/rock-paper/style/style.scss
+++ b/rock-paper/style/style.scss
@@ -224,6 +224,10 @@
 
 
 @media (max-width: 600px){
+
+    .psr {
+        margin: 0px auto 90px;
+    }
     .header {
         margin: 0px auto 13%;
     }
@@ -231,7 +235,7 @@
         width: 98%;
         height: unset;
         flex-wrap: wrap;
-        margin: 0px auto;
+        margin: 0px auto 19px;
         justify-content: space-between;
         h3 {
             font-size: 15px;
@@ -275,10 +279,10 @@
     }
     .rules-call {
         transform: translateX(-50%);
-        left: 50%;
-        bottom: 40px;
-        padding: 12px;
+        margin-left: 50%;
+        padding: 10px 48px;
         font-size: 19px;
+        position: static;
     }
 }
 
