--- a/ipTracker/style/style.css
+++ b/ipTracker/style/style.css
@@ -15,7 +15,7 @@
 }
 
 .main {
-  background-image: url(../images/pattern-bg.png);
+  background-image: url(../imgs/pattern-bg.png);
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -44,7 +44,7 @@
   height: 45px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
-  background-image: url(../images/icon-arrow.svg);
+  background-image: url(../imgs/icon-arrow.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 8px;
