--- a/ipTracker/style/style.scss
+++ b/ipTracker/style/style.scss
@@ -13,6 +13,7 @@
 
 .content {
     height: 100vh;
+    min-height: 900px;
     display: grid;
     grid-template-rows: 230px 1fr;
 }
@@ -25,6 +26,7 @@
     align-items: center;
     position: relative;
     padding-top: 22px;
+    min-height: 300px;
     .addressH1 {
         color: white;
         margin-bottom: 25px;
