--- a/ipTracker/style/style.scss
+++ b/ipTracker/style/style.scss
@@ -66,7 +66,7 @@
     width: 80%;
     border-radius: 10px;
     position: absolute;
-    top: 100%;
+    top: 232px;
     transform: translateY(-50%);
     padding: 30px 20px;
     & > div {
@@ -107,6 +107,7 @@
         .main {
             .information {
                 display: block;
+                top: 332px;
             }
         }
     }
