--- a/ipTracker/style/style.css
+++ b/ipTracker/style/style.css
@@ -63,7 +63,7 @@
   width: 80%;
   border-radius: 10px;
   position: absolute;
-  top: 100%;
+  top: 232px;
   transform: translateY(-50%);
   padding: 30px 20px;
 }
@@ -102,5 +102,6 @@
   }
   .content .main .information {
     display: block;
+    top: 332px;
   }
 }/*# sourceMappingURL=style.css.map */
